--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
         <ul class="navbar-nav ml-auto">
             <li>
                 <a href="{% url 'logout' %}">
-                    <i class="fas fa-sign-out-alt"></i> <span>Log Out</span>
+                    <i class="fas fa-sign-out-alt"></i> <span>Salir</span>
                 </a>
             </li>
         </ul>
