--- a/client/templates/client/client_form.html
+++ b/client/templates/client/client_form.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Clients{% endblock title %}
+{% block title %}Clientes{% endblock title %}
 
 {% block css %}{% endblock css %}
 
 {% block content-header %}
 
     {% if not form.instance.pk %}
-        <h1>New Client</h1>
+        <h1>Nuevo Cliente</h1>
     {% else %}
-        <h1>Update Client: {{ object.name_surname }}</h1>
+        <h1>Modificar Cliente: {{ object.name }}</h1>
     {% endif %}
 
 {% endblock content-header %}
@@ -40,14 +40,19 @@
         <div class="card">
             <div class="card-body">
                 <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-6 form-group">
+                        <b>{{ form.name.label }}</b>
+                        {{ form.name }}
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-6 form-group">
+                        <b>{{ form.surname.label }}</b>
+                        {{ form.surname }}
+                    </div>
                     <div class="col-xs-12 col-sm-4 col-md-4 form-group">
                         <b>{{ form.identification.label }}</b>
                         {{ form.identification }}
                     </div>
-                    <div class="col-xs-12 col-sm-8 col-md-8 form-group">
-                        <b>{{ form.name_surname.label }}</b>
-                        {{ form.name_surname }}
-                    </div>
+                    
                     <div class="col-xs-12 col-sm-6 col-md-6 form-group">
                         <b>{{ form.email.label }}</b>
                         {{ form.email }}
@@ -66,9 +71,9 @@
 
         <div class="box-footer" style="text-align: right">
             <a href="{% url 'client:list' %}">
-                <div class="btn btn-default"><span class="fas fa-ban"> <span class="btn-custom-font">Cancel</span></span></div>
+                <div class="btn btn-default"><span class="fas fa-ban"> <span class="btn-custom-font">Cancelar</span></span></div>
             </a>
-            <button type="submit" class="btn btn-primary"><span class="fas fa-save"> <span class="btn-custom-font">Save</span></span></button>
+            <button type="submit" class="btn btn-primary"><span class="fas fa-save"> <span class="btn-custom-font">Guardar</span></span></button>
         </div>
     </form>
 
