--- a/order/templates/order/order_list.html
+++ b/order/templates/order/order_list.html
@@ -12,7 +12,7 @@
 
 {% block content-header %}
 
-    <h1>List of Work Orders</h1>
+    <h1>Ordenes de trabajo</h1>
 
 {% endblock content-header %}
 
@@ -23,11 +23,11 @@
             <div class="row">
                 <div class="col-xs-4 col-sm-4 col-md-6">
                     <a href="{% url 'order:create' %}">
-                        <div class="btn btn-primary"><span class="fa fa-plus"> <span class="btn-custom-font">Create</span></span></div>
+                        <div class="btn btn-primary"><span class="fa fa-plus"> <span class="btn-custom-font">Crear</span></span></div>
                     </a>
                 </div>
                 <div class="box-tools col-xs-8 col-sm-8 col-md-6">
-                    <input id="table_search" type="text" class="form-control" placeholder="Search">
+                    <input id="table_search" type="text" class="form-control" placeholder="Buscar">
                 </div>
             </div>
         </div>
