--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CellFixStore | Sign In</title>
+    <title>Tecnicyl | Ingreso</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,12 +18,12 @@
 <body class="hold-transition login-page">
 <div class="login-box">
     <div class="login-logo">
-        <b>CellFixStore</b>
+        <b>Tecnicyl</b>
     </div>
 
     <div class="card">
         <div class="card-body login-card-body">
-            <p class="login-box-msg">Sign in to start your session</p>
+            <p class="login-box-msg">Ingreso</p>
 
             <form action="{% url 'login' %}" method="post">
                 {% csrf_token %}
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="password" name="password" class="form-control" placeholder="Password">
+                    <input type="password" name="password" class="form-control" placeholder="Contraseña">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
@@ -64,7 +64,7 @@
                 <div class="row">
                     <div class="col-8"></div>
                     <div class="col-4">
-                        <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                        <button type="submit" class="btn btn-primary btn-block">Ingreso</button>
                     </div>
                 </div>
             </form>
