--- a/config/templates/config/config_form.html
+++ b/config/templates/config/config_form.html
@@ -12,7 +12,7 @@
 
 {% block content-header %}
 
-    <h1>Configuration</h1>
+    <h1>Configuracion</h1>
 
 {% endblock content-header %}
 
@@ -42,7 +42,7 @@
             <div class="card-header">
                 <div class="row">
                     <div class="col-xs-8 col-sm-8 col-md-12">
-                        <h3 class="box-title">Site</h3>
+                        <h3 class="box-title">Programa</h3>
                     </div>
                 </div>
             </div>
@@ -63,11 +63,11 @@
                             </div>
                             <div>
                                 <span class="btn btn-outline-secondary btn-file">
-                                  <span class="fileinput-new">Select image</span>
-                                  <span class="fileinput-exists">Change</span>
+                                  <span class="fileinput-new">Seleccionar imagen</span>
+                                  <span class="fileinput-exists">Cambiar</span>
                                   {{ form.site_logo_mini }}
                                 </span>
-                                    <a href="#" class="btn btn-outline-secondary fileinput-exists" data-dismiss="fileinput">Remove</a>
+                                    <a href="#" class="btn btn-outline-secondary fileinput-exists" data-dismiss="fileinput">Eliminar</a>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
             <div class="card-header">
                 <div class="row">
                     <div class="col-xs-8 col-sm-8 col-md-12">
-                        <h3 class="box-title">Work Orders</h3>
+                        <h3 class="box-title">Ordenes de trabajo</h3>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
         </div>
 
         <div class="box-footer" style="text-align: right">
-            <button type="submit" class="btn btn-primary"><span class="fas fa-save"> <span class="btn-custom-font">Save</span></span></button>
+            <button type="submit" class="btn btn-primary"><span class="fas fa-save"> <span class="btn-custom-font">Guardar</span></span></button>
         </div>
     </form>
 
