--- a/order/templates/order/dashboard.html
+++ b/order/templates/order/dashboard.html
@@ -18,7 +18,7 @@
         <div class="card-header">
             <h3 class="card-title">
                 <i class="fas fa-chart-pie mr-1"></i>
-                Work Orders
+                Ordenes
             </h3>
         </div>
         <div class="card-body">
@@ -32,7 +32,7 @@
         <div class="card-header">
             <h3 class="card-title">
                 <i class="fas fa-chart-pie mr-1"></i>
-                Incomes
+                Cobros
             </h3>
         </div>
         <div class="card-body">
