--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,8 @@
         <!-- Brand Logo -->
         <a href="#" class="brand-link">
             {% if settings.site_logo_mini %}
-                    <img src="{{ settings.site_logo_mini.url }}" alt="{{ settings.site_name }}" class="brand-image img-circle elevation-3" style="opacity: .8">
+                    <img src="{{ settings.site_logo_mini.url }}" alt="{{ settings.site_name }}" class="brand-image elevation-3" >
+                    <!--img src="{{ settings.site_logo_mini.url }}" alt="{{ settings.site_name }}" class="brand-image img-circle elevation-3" style="opacity: .8"-->
             {% else %}
                 <img src="{% static 'admin_lte/img/AdminLTELogo.png' %}" alt="" class="brand-image img-circle elevation-3" style="opacity: .8">
             {% endif %}
